--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@ body{
 }
 header{
     height: 190px;
-    background-color: gray
+    background-color: #292525;
 
 }
 section{
@@ -32,7 +32,7 @@ p{
 footer{
     float: right;
     width: 100%;
-    background-color:
+    background-color:#292525;
 
 }
 /*class styling starts here
@@ -50,7 +50,8 @@ as many as you like*/
 .gnomeh p{
     font-family:sans ;
     font-size: 3em;
-    color: darkgoldenrod;
+    color: #f2d000;
+    font-weight: 100;
 
 }
 .gnometxt{
@@ -148,6 +149,16 @@ as many as you like*/
     margin-top: 100px;
     margin-bottom: 100px;
 }
+.footer p{
+   text-align: center;
+    color:#f2d000;
+    font-weight: 100;
+}
+.footer a{
+    text-decoration: none;
+    color: #f2d000;
+
+}
 
 /*id styling comes here
 dont mess up*/
@@ -189,8 +200,17 @@ dont mess up*/
 #ad{
     float: right;
     position: relative;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    background-color: #2fbd04;
+}
+#ad p {
+    text-align: center;
+    font-weight: 100;
+    color: #fff;
 
 }
+
 #rcontent{
     position: relative;
     float: right;
